java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testTypeFromParamb.pass
package org.netbeans.test.java.hints;

import java.awt.Rectangle;
import javax.swing.SwingUtilities;

/**
 * @author leon chiver
 */
public class TypeFromParamb {

    private Rectangle f;
    
    /** Creates a new instance of TypeFromParama */
    public TypeFromParamb() {
        doStuff(1, SwingUtilities.calculateInnerArea(null, f), 2);
    }
    
    public void doStuff(int i1, Object o, int i2) {
        
    }
    
}
